# fractal_viewer

./: CMakeLists.txt
shaders/: julia.frag  mandelbrot.frag
src/: Camera.cpp  Camera.h  FractalShader.cpp  FractalShader.h  GuiPanel.cpp  GuiPanel.h  main.cpp
